added ConfigurationBean.isSearchResultGroupsEnabled(); refs #25566