@@ -22,8 +22,6 @@
 package io.goobi.viewer.managedbeans;
 
 import java.io.Serializable;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -52,8 +50,6 @@ import io.goobi.viewer.exceptions.PresentationException;
 import io.goobi.viewer.exceptions.ViewerConfigurationException;
 import io.goobi.viewer.managedbeans.utils.BeanUtils;
 import io.goobi.viewer.messages.ViewerResourceBundle;
-import io.goobi.viewer.model.citation.CitationLink;
-import io.goobi.viewer.model.citation.CitationLink.CitationLinkLevel;
 import io.goobi.viewer.model.job.download.DownloadOption;
 import io.goobi.viewer.model.maps.GeoMapMarker;
 import io.goobi.viewer.model.metadata.Metadata;
@@ -968,7 +964,7 @@ public class ConfigurationBean implements Serializable {
     public boolean isShowSearchInItem() {
         return DataManager.getInstance().getConfiguration().isSearchInItemEnabled();
     }
-    
+
     /**
      * <p>
      * isShowSearchInItemOnlyIfFullTextAvailable.
@@ -1395,6 +1391,14 @@ public class ConfigurationBean implements Serializable {
 
     /**
      * 
+     * @return true if result groups enabled; false otherwise
+     */
+    public boolean isSearchResultGroupsEnabled() {
+        return DataManager.getInstance().getConfiguration().isSearchResultGroupsEnabled();
+    }
+
+    /**
+     * 
      * @return List of names of the configured search result groups
      * @should return all values
      */
@@ -1405,7 +1409,7 @@ public class ConfigurationBean implements Serializable {
                 .getSearchResultGroups()
                 .stream()
                 .map(SearchResultGroup::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
